Prevents project card text from overflowing
Right now this issue is solved by setting a specific pixel size for the
width, and by adding a scrollbar for the height.

--- a/styles.css
+++ b/styles.css
@@ -122,19 +122,26 @@ iframe{
 }
 
 .project-info{
-    height: 90px;
+    height: 100px;
     width: 300px;
     display: flex;
 }
 
 .description{
-    flex: 1;
+    width: 210px;
+    height: auto;
+    white-space: pre-line;
+    overflow: auto;
+    padding-left: 4px;
 }
 
 .btn-section{
-    flex: 0 0 30px;
+    flex-grow: 0;
+    flex-shrink: 0;
     display: flex;
     flex-direction: column;
+    overflow: hidden;
+    height: auto;
 }
 
 #copyright{
